--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 <![endif]-->
 
+<section class="preloader"></section>
+
 <section class="app">
 	<div class="row nav counter">
 		<p class="forward-counter"></p>
@@ -68,6 +70,7 @@
 					<li>use ← → for swapping slides</li>
 					<li>use ↑ ↓ for swapping images with text</li>
 				</ul>
+				<p>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">fb</a></p>
 			</div>
 		</div>
 	</section>
