--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
 		<div class="row layout">
 			<div class="about">
 				<h1>Prolog</h1>
+				<p>does architecture.</p>
+
+				<p>has been awarded more than three times:<br />
+					With <a href="http://www.a-ronet.pl/index.php?mod=nagroda&n_id=4629" target="_blank">2nd prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
+					With <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">2nd prize</a> in an open International Competition for the Urban Redevelopment of&nbsp;Interoddera area of&nbsp;Szczecin, PL.<br />
+				With Special Mention in Europan 13 for the Urban Redevelopment of&nbsp;Krena riverbanks in Gjakova,&nbsp;KO.</p>
+				<!--
 				<p>proposed an autonomous Building for International Music Centre in the neighbourhood of Park and the Birthplace of Fryderyk Chopin. On 28th of June 2018 it was awarded with Second Prize in an open <a href='http://archcompetition.chopin.gov.pl/' target='_blank'>International Competition</a>.</p>
+				-->
 			</div>
 			<div class="contact">
 				<ul>
