--- a/src/index.html
+++ b/src/index.html
@@ -28,22 +28,22 @@
 <section class="app">
 	<div class="row nav counter">
 		<p class="forward-counter"></p>
-		<p class="backward-counter"></p>
+		<!-- <p class="backward-counter"></p> -->
 	</div>
 	<div class="row gallery">
 		<div class="swiper-container forward">
 			<div class="swiper-wrapper">
 			</div>
 		</div>
-		<div class="swiper-container backward">
+<!-- 		<div class="swiper-container backward">
 			<div class="swiper-wrapper">
 			</div>
-		</div>
+		</div> -->
 	</div>
-	<nav class="row nav ">
+<!-- 	<nav class="row nav ">
 		<button class="forward-button" data-mode="image">text</button>
 		<button class="backward-button" data-mode="image">text</button>
-	</nav>
+	</nav> -->
 	</section>
 	<section class="info">
 		<nav class="trigger nav row">
