--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -28,22 +28,13 @@
 <section class="app">
 	<div class="row nav counter">
 		<p class="forward-counter"></p>
-		<!-- <p class="backward-counter"></p> -->
 	</div>
 	<div class="row gallery">
 		<div class="swiper-container forward">
 			<div class="swiper-wrapper">
 			</div>
 		</div>
-<!-- 		<div class="swiper-container backward">
-			<div class="swiper-wrapper">
-			</div>
-		</div> -->
 	</div>
-<!-- 	<nav class="row nav ">
-		<button class="forward-button" data-mode="image">text</button>
-		<button class="backward-button" data-mode="image">text</button>
-	</nav> -->
 	</section>
 	<section class="info">
 		<nav class="trigger nav row">
@@ -58,9 +49,6 @@
 					With <a href="http://www.a-ronet.pl/index.php?mod=nagroda&n_id=4629" target="_blank">2nd prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
 					With <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">2nd prize</a> in an open International Competition for the Urban Redevelopment of&nbsp;Interoddera area of&nbsp;Szczecin, PL.<br />
 				With Special Mention in Europan 13 for the Urban Redevelopment of&nbsp;Krena riverbanks in Gjakova,&nbsp;KO.</p>
-				<!--
-				<p>proposed an autonomous Building for International Music Centre in the neighbourhood of Park and the Birthplace of Fryderyk Chopin. On 28th of June 2018 it was awarded with Second Prize in an open <a href='http://archcompetition.chopin.gov.pl/' target='_blank'>International Competition</a>.</p>
-				-->
 			</div>
 			<div class="contact">
 				<ul>
@@ -82,12 +70,6 @@
 			</div>
 		</div>
 	</section>
-<!--
-	<div class="flip-device">
-		<p>Please flip your device</p>
-		<img src="images/flipIt_x3.png" srcset="images/flipIt_x1.png 1x, images/flipIt_x2.png 2x, images/flipIt_x3.png 3x">
-	</div>
--->
 	<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
