--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>PROLOG</title>
-	<meta name="description" content="PROLOG proposed an autonomous Building for International Music Centre in the neighbourhood of Park and the Birthplace of Fryderyk Chopin.">
-  <meta name="keywords" content="Chopin architecture competition, autonomous architecture, square plan, international music centre, zelazowa wola, prolog architecture, non-figurative, concert hall">
+	<meta name="description" content="PROLOG does architecture. Based in Wroclaw, PL operates internationally. Curator of 'Trouble in Paradise' the exhibition for Polish Pavilion at the Biennale Architettura 2020.">
+  <meta name="keywords" content="prolog architecture, trouble in paradise, polish pavilion, concert hall, BIENNALE ARCHITETTURA 2020, Jurczenko, Kowal, Mazan, Poteralski, Śliwa">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="apple-touch-icon" href="icon.png">
@@ -14,9 +14,10 @@
 	<link rel="icon" type="image/png" href="/favicon_96x96.png" sizes="96x96">
 	<link rel="icon" type="image/png" href="/favicon_16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="/favicon_32x32.png" sizes="32x32">
-	<link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=2.0.0">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700" rel="stylesheet"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.min.css?v=2.0.1">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -26,11 +27,16 @@
 <section class="preloader"></section>
 
 <section class="app">
-	<div class="row nav counter">
+<!-- 	<div class="row nav counter">
 		<p class="forward-counter"></p>
+	</div> -->
+	<div class="row prolog">
+		<p>PROLOG</p>
 	</div>
 	<div class="row gallery">
 		<div class="swiper-container forward">
+			<div class="rew button"></div>
+			<div class="ff button"></div>
 			<div class="swiper-wrapper">
 			</div>
 		</div>
@@ -74,7 +80,7 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-	<script src="js/scripts.min.js?v=2.0.0"></script>
+	<script src="js/scripts.min.js?v=2.0.1"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
