Poprawione ściezki do plików favicon

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="apple-touch-icon" href="icon.png">
-	<link rel="icon" type="image/png" href="/favicon_196x196.png" sizes="196x196">
-	<link rel="icon" type="image/png" href="/favicon_160x160.png" sizes="160x160">
-	<link rel="icon" type="image/png" href="/favicon_96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="/favicon_16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="/favicon_32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon_196x196.png" sizes="196x196">
+	<link rel="icon" type="image/png" href="favicon_160x160.png" sizes="160x160">
+	<link rel="icon" type="image/png" href="favicon_96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="favicon_16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="favicon_32x32.png" sizes="32x32">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700" rel="stylesheet"> -->
 	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=2.0.1">
+	<link rel="stylesheet" href="css/main.min.css?v=2.0.2">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -80,7 +80,7 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-	<script src="js/scripts.min.js?v=2.0.1"></script>
+	<script src="js/scripts.min.js?v=2.0.2"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
