Jedna kolumna w Info i powrót licznika

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 	<!-- <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700" rel="stylesheet"> -->
 	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=2.0.2">
+	<link rel="stylesheet" href="css/main.min.css?v=2.0.3">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -26,12 +26,15 @@
 
 <section class="preloader"></section>
 
+<section class="title">
+	<div class="row">
+		<h1 class="prolog">PROLOG</h1>
+	</div>
+</section>
+
 <section class="app">
-<!-- 	<div class="row nav counter">
+	<div class="row nav counter">
 		<p class="forward-counter"></p>
-	</div> -->
-	<div class="row prolog">
-		<p>PROLOG</p>
 	</div>
 	<div class="row gallery">
 		<div class="swiper-container forward">
@@ -41,53 +44,61 @@
 			</div>
 		</div>
 	</div>
-	</section>
-	<section class="info">
-		<nav class="trigger nav row">
-			<button><span class="info">i</span><span class="close">×</span></button>
-		</nav>
-		<div class="row layout">
-			<div class="about">
-				<h1>Prolog</h1>
-				<p>does architecture.</p>
+</section>
 
-				<p>has been awarded more than three times:<br />
-					With <a href="http://www.a-ronet.pl/index.php?mod=nagroda&n_id=4629" target="_blank">2nd prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
-					With <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">2nd prize</a> in an open International Competition for the Urban Redevelopment of&nbsp;Interoddera area of&nbsp;Szczecin, PL.<br />
-				With Special Mention in Europan 13 for the Urban Redevelopment of&nbsp;Krena riverbanks in Gjakova,&nbsp;KO.</p>
-			</div>
-			<div class="contact">
-				<ul>
-					<li><h1>PROLOG</h1></li>
-					<li><a href="mailto:mirabelajurczenko@gmail.com">Mirabela Jurczenko</a> (Racibórz, PL / Rotterdam, NL)</li>
-					<li><a href="mailto:bartekkowal@o2.pl">Bartosz Kowal</a> (Biestrzyków, PL / Chur, CH)</li>
-					<li><a href="mailto:wojciechmazan@gmail.com">Wojciech Mazan</a> (Nysa, PL / Graz, AT)</li>
-					<li><a href="mailto:bpoteralski@gmail.com">Bartłomiej Poteralski</a> (Gomunice, PL / Graz, AT)</li>
-					<li><a href="mailto:rafal.sliwa.arch@gmail.com">Rafał Śliwa</a> (Wrocław, PL / Wrocław, PL)</li>
-				</ul>
-			</div>
-			<div class="manual">
-				<ul>
-					<li><h1>NAVIGATION</h1></li>
-					<li>use ← → for swapping slides</li>
-					<li>use ↑ ↓ for swapping images with text</li>
-				</ul>
-				<p>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">fb</a></p>
-			</div>
+<section class="info">
+	<nav class="trigger nav row">
+		<button><span class="info">i</span><span class="close">×</span></button>
+	</nav>
+	<div class="row layout">
+		<div class="about">
+			<h1>Prolog</h1>
+			<p>does architecture.</p>
+
+			<p>most recently has been awarded with:<br />
+				with <a href="https://zacheta.art.pl/pl/biennale" target="_blank">the first prize</a> for a curatorial proposal at the 17th International Architecture Exhibition La Biennale di Venezia 2020 entitled ‘What is Familiar is not Necessarily Understood. Countryside, Forms of Dwelling and Production.’<br />
+				<a href="http://www.architektusajunga.lt/konkursas/nacionaline-koncertu-sale/en/home/" target="_blank">shortlisted as 10th</a> in an open International Competition for the National Concert Hall ‘Tautos Namai’ in Vilnius, LT.<br />
+				with <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">the second prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
+			</p>
 		</div>
-	</section>
-	<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-	<script src="js/scripts.min.js?v=2.0.2"></script>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'UA-121436881-1');
-	</script>
+		<div class="contact">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>is:</p>
+
+				<li><a href="mailto:mail@prlg.pl">Mirabela Jurczenko</a> (Racibórz, PL / Rotterdam, NL)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartosz Kowal</a> (Wrocław, PL / Wrocław, PL)</li>
+				<li><a href="mailto:mail@prlg.pl">Wojciech Mazan</a> (Nysa, PL / London, UK)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartłomiej Poteralski</a> (Gomunice, PL / Graz, AT)</li>
+				<li><a href="mailto:mail@prlg.pl">Rafał Śliwa</a> (Wrocław, PL / Szczecin, PL)</li>
+			</ul>
+		</div>
+		<div class="manual">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>elsewhere:</p>
+
+				<li>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">FB</a></li>
+				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
+				<li>for navigation</li>
+				<li>use ← → for swapping slides</li>
+				<!-- <li>use ↑ ↓ for swapping images with text</li> -->
+			</ul>
+	</div>
+</section>
+
+<script
+src="https://code.jquery.com/jquery-3.4.1.min.js"
+integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+crossorigin="anonymous"></script>
+<script src="js/scripts.min.js?v=2.0.3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'UA-121436881-1');
+</script>
 
 </body>
 </html>
