Poprawki z maila, cz. 3

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 	<!-- <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700" rel="stylesheet"> -->
 	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=2.0.3">
+	<link rel="stylesheet" href="css/main.min.css?v=2.0.4">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -48,7 +48,7 @@
 
 <section class="info">
 	<nav class="trigger nav row">
-		<button><span class="info">i</span><span class="close">×</span></button>
+		<button><span class="info">i</span><!-- <span class="close">×</span> --></button>
 	</nav>
 	<div class="row layout">
 		<div class="about">
@@ -82,7 +82,6 @@
 				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
 				<li>for navigation</li>
 				<li>use ← → for swapping slides</li>
-				<!-- <li>use ↑ ↓ for swapping images with text</li> -->
 			</ul>
 	</div>
 </section>
@@ -91,7 +90,7 @@
 src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
-<script src="js/scripts.min.js?v=2.0.3"></script>
+<script src="js/scripts.min.js?v=2.0.4"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
 <script>
 	window.dataLayer = window.dataLayer || [];
