--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,109 @@
 </section>
 
 <section class="info">
+
 	<nav class="trigger nav row">
-		<button><span class="info">i</span><!-- <span class="close">×</span> --></button>
+		<button class="contact">contact</button>
+		<button class="projects">projects</button>
+		<button class="about">about</button>
 	</nav>
-	<div class="row layout">
+
+	<div class="row layout contact hidden">
+
+		<!-- <div class="about">
+			<h1>CONTACT</h1>
+			<p>does architecture.</p>
+
+			<p>most recently has been awarded with:<br />
+				with <a href="https://zacheta.art.pl/pl/biennale" target="_blank">the first prize</a> for a curatorial proposal at the 17th International Architecture Exhibition La Biennale di Venezia 2020 entitled ‘What is Familiar is not Necessarily Understood. Countryside, Forms of Dwelling and Production.’<br />
+				<a href="http://www.architektusajunga.lt/konkursas/nacionaline-koncertu-sale/en/home/" target="_blank">shortlisted as 10th</a> in an open International Competition for the National Concert Hall ‘Tautos Namai’ in Vilnius, LT.<br />
+				with <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">the second prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
+			</p>
+		</div> -->
+		<button class="closeBtn" type="button" name="button">×</button>
+		<div class="contact">
+			<h1>contact:</h1>
+			<ul>
+				<li>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">FB</a></li>
+				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
+				<li>use <a href="mailto:mail@prlg.pl">mail@prlg.pl</a></li>
+				<li>use <a href="tel:0048797747968">0048 797747968</a></li>
+			</ul>
+			<h2>address:</h2>
+			<ul>
+				<li>room 106, 1st floor</li>
+				<li><a href="https://goo.gl/maps/q2LD9fauWJ4vynr66">Kraińskiego 16</a>, 50-153 Wrocław</li>
+			</ul>
+			<h2>company data:</h2>
+			<ul>
+				<li>PROLOG sp. z o.o.</li>
+				<li>KRS: 0000924963</li>
+				<li>NIP: 8992908125</li>
+				<li>REGON: 5206096200000</li>
+			</ul>
+			<ul>
+				<li>for navigation</li>
+				<li>use ← → for swapping slides</li>
+			</ul>
+			<!-- <ul>
+				<li><a href="mailto:mail@prlg.pl">Mirabela Jurczenko</a> (Racibórz, PL / Rotterdam, NL)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartosz Kowal</a> (Wrocław, PL / Wrocław, PL)</li>
+				<li><a href="mailto:mail@prlg.pl">Wojciech Mazan</a> (Nysa, PL / London, UK)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartłomiej Poteralski</a> (Gomunice, PL / Graz, AT)</li>
+				<li><a href="mailto:mail@prlg.pl">Rafał Śliwa</a> (Wrocław, PL / Szczecin, PL)</li>
+			</ul> -->
+		</div>
+		<!-- <div class="manual">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>elsewhere:</p>
+
+				<li>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">FB</a></li>
+				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
+				<li>for navigation</li>
+				<li>use ← → for swapping slides</li>
+			</ul>
+		</div> -->
+	</div><!-- .row.layout -->
+
+	<div class="row layout projects hidden">
+		<button class="closeBtn" type="button" name="button">×</button>
+
+		<div class="about">
+			<h1>PROJECTS</h1>
+			<p>does architecture.</p>
+
+			<p>most recently has been awarded with:<br />
+				with <a href="https://zacheta.art.pl/pl/biennale" target="_blank">the first prize</a> for a curatorial proposal at the 17th International Architecture Exhibition La Biennale di Venezia 2020 entitled ‘What is Familiar is not Necessarily Understood. Countryside, Forms of Dwelling and Production.’<br />
+				<a href="http://www.architektusajunga.lt/konkursas/nacionaline-koncertu-sale/en/home/" target="_blank">shortlisted as 10th</a> in an open International Competition for the National Concert Hall ‘Tautos Namai’ in Vilnius, LT.<br />
+				with <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">the second prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
+			</p>
+		</div>
+		<div class="contact">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>is:</p>
+
+				<li><a href="mailto:mail@prlg.pl">Mirabela Jurczenko</a> (Racibórz, PL / Rotterdam, NL)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartosz Kowal</a> (Wrocław, PL / Wrocław, PL)</li>
+				<li><a href="mailto:mail@prlg.pl">Wojciech Mazan</a> (Nysa, PL / London, UK)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartłomiej Poteralski</a> (Gomunice, PL / Graz, AT)</li>
+				<li><a href="mailto:mail@prlg.pl">Rafał Śliwa</a> (Wrocław, PL / Szczecin, PL)</li>
+			</ul>
+		</div>
+		<div class="manual">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>elsewhere:</p>
+
+				<li>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">FB</a></li>
+				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
+				<li>for navigation</li>
+				<li>use ← → for swapping slides</li>
+			</ul>
+		</div>
+
+		<!-- TEST -->
 		<div class="about">
 			<h1>Prolog</h1>
 			<p>does architecture.</p>
@@ -83,7 +182,50 @@
 				<li>for navigation</li>
 				<li>use ← → for swapping slides</li>
 			</ul>
-	</div>
+		</div>
+		<!-- TEST: koniec -->
+
+	</div><!-- .row.layout -->
+
+	<div class="row layout about hidden">
+		<button class="closeBtn" type="button" name="button">×</button>
+
+		<div class="about">
+			<h1>ABOUT</h1>
+
+			<p>most recently has been awarded with:<br />
+				with <a href="https://zacheta.art.pl/pl/biennale" target="_blank">the first prize</a> for a curatorial proposal at the 17th International Architecture Exhibition La Biennale di Venezia 2020 entitled ‘What is Familiar is not Necessarily Understood. Countryside, Forms of Dwelling and Production.’<br />
+				<a href="http://www.architektusajunga.lt/konkursas/nacionaline-koncertu-sale/en/home/" target="_blank">shortlisted as 10th</a> in an open International Competition for the National Concert Hall ‘Tautos Namai’ in Vilnius, LT.<br />
+				with <a href="http://a-ronet.pl/index.php?mod=nagroda&n_id=4823" target="_blank">the second prize</a> in an open International Competition for The Music Centre in the neighbourhood of&nbsp;Park and the Birthplace of&nbsp;Fryderyk Chopin, Żelazowa Wola, PL.<br />
+			</p>
+		</div>
+		<div class="contact">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>is:</p>
+
+				<li><a href="mailto:mail@prlg.pl">Mirabela Jurczenko</a> (Racibórz, PL / Rotterdam, NL)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartosz Kowal</a> (Wrocław, PL / Wrocław, PL)</li>
+				<li><a href="mailto:mail@prlg.pl">Wojciech Mazan</a> (Nysa, PL / London, UK)</li>
+				<li><a href="mailto:mail@prlg.pl">Bartłomiej Poteralski</a> (Gomunice, PL / Graz, AT)</li>
+				<li><a href="mailto:mail@prlg.pl">Rafał Śliwa</a> (Wrocław, PL / Szczecin, PL)</li>
+			</ul>
+		</div>
+		<div class="manual">
+			<ul>
+				<li><h1>PROLOG</h1></li>
+				<p>elsewhere:</p>
+
+				<li>use <a href="https://www.facebook.com/PROLOG-272353060223014/" target="_blank">FB</a></li>
+				<li>use <a href="https://www.instagram.com/prlgpl/" target="_blank">IG</a></li>
+				<li>for navigation</li>
+				<li>use ← → for swapping slides</li>
+			</ul>
+		</div>
+
+	</div><!-- .row.layout -->
+
+
 </section>
 
 <script
@@ -91,7 +233,7 @@ src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 <script src="js/scripts.min.js?v=2.1.0"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script> -->
 <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
