--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,9 @@
 
 	<div class="row layout projects hidden">
 		<button class="closeBtn" type="button" name="button">×</button>
+		<nav class="sidenav">
+			<ul></ul>
+		</nav>
 
 		<article class="projects">
 			<h1>projects</h1>
@@ -93,7 +96,10 @@
 
 	<div class="row layout about hidden">
 		<button class="closeBtn" type="button" name="button">×</button>
-
+		<nav class="sidenav">
+			<ul></ul>
+		</nav>
+		
 		<article class="about">
 			<h1>about</h1>
 		</article>
