--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<link rel="icon" type="image/png" href="favicon_16x16.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="favicon_32x32.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css?v=3.0.3betabetabetabetabetabetabetabetabetabetabeta">
+	<link rel="stylesheet" href="css/main.min.css?v=3.0.5betabetabetabetabetabetabetabetabetabetabetabetabetabetabeta">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -45,7 +45,6 @@
 </section>
 
 <section class="info">
-
 	<nav class="trigger nav row">
 		<button class="contact">contact</button>
 		<button class="projects">projects</button>
@@ -97,23 +96,71 @@
 	<div class="row layout about hidden">
 		<button class="closeBtn" type="button" name="button">×</button>
 		<nav class="sidenav">
-			<ul></ul>
+			<ul>
+				<li><a data-target="about" href="#Bio">Bio</a></li>
+			</ul>
 		</nav>
 
 		<article class="about">
 			<h1>about</h1>
+			<section class="bio">
+				<h2 id="Bio">PROLOG</h2>
+				<p>was founded in 2017. PROLOG engages with architecture through design projects, research, writing, exhibitions and workshops. PROLOG aims to frame each project from a design and theoretical perspective. PROLOG is thought as a formative period, therefore its focus lies in the exploration, speculations and experiments. PROLOG is scattered around Europe with a <a href="https://goo.gl/maps/z7VdWdBe3ZqDgWAH9" target="_blank">base</a> in Wroclaw, Poland. </p>
+				<p>PROLOG is a curator of <a href="https://labiennale.art.pl/trouble-in-paradise/" target="_blank">'Trouble in Paradise'</a> the exhibition for Polish Pavilion at the Biennale Architettura 2021.<br></p>
+				<h2>PROLOG</h2>
+				<p>is:</p>
+				<dl>
+					<dt>Mirabela Jurczenko (Racibórz, PL / Rotterdam, NL)</dt>
+					<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+				</dl>
+				<dl>
+					<dt>Mirabela Jurczenko (Racibórz, PL / Rotterdam, NL)</dt>
+					<dd>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</dl>
+				</dl>
+				<dl>
+					<dt>Bartosz Kowal (Wrocław, PL)</dt>
+					<dd>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</dl>
+				</dl>
+				<dl>
+					<dt>Wojciech Mazan (Nysa, PL / Wrocław, PL)</dt>
+					<dd>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</dl>
+				</dl>
+				<dl>
+					<dt>Bartłomiej Poteralski (Gomunice, PL / Graz, AT)</dt>
+					<dd>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</dl>
+				</dl>
+				</dl>
+				<dl>
+					<dt>Apolonia Slesarow (Wrocław, PL)</dt>
+				</dl>
+				<dl class="past">
+					<dt>past colaborators: Rafał Śliwa (2017–2020)</dt>
+				</dl>
+			</section>
+
 		</article>
 
 	</div><!-- .row.layout -->
-
-
 </section>
+
+<div class="cookie-stuff">
+	<button>×</button>
+	<p>This site uses cookies and gathers your personal data for statistics profiling purposes. Use this site only if you have read, understood and agreed to our <a href="./assets/polityka_cookies_prolog.pdf" target="_blank">privacy policy</a>.</p>
+</div>
 
 <script
 src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
-<script src="js/scripts.min.js?v=3.0.3betabetabetabetabetabetabetabetabetabetabeta"></script>
+<script src="js/scripts.min.js?v=3.0.5betabetabetabetabetabetabetabetabetabetabetabetabetabetabeta"></script>
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script> -->
 <script>
 	window.dataLayer = window.dataLayer || [];
