--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@ src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
 <script src="js/scripts.min.js?v=3.0.6"></script>
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script> -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121436881-1"></script>
 <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
